# properly

./: .gitignore  .gitmodules  README.rst  makedocs.sh  pyproject.toml
.github/workflows/: python-app.yml
docs/: .buildinfo  Home.rst  Index.rst  Usage.rst  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/Api/: Properly.Domain.rst
docs/_sources/: index.rst.txt
docs/_sources/api-docs/: properly.domain.rst.txt  properly.lib.rst.txt
docs/api-docs/: Modules.rst  Properly.Domain.rst  Properly.Lib.rst  Properly.rst  modules.html  properly.domain.html  properly.html  properly.lib.html
docs/source/: conf.py  index.rst  usage.rst
docs/source/apidoc/: modules.rst  properly.rst
src/docs/source/: conf.py  index.rst
src/properly/: __init__.py  __main__.py
src/properly/domain/: Bar.py
src/properly/lib/: Foo.py  __init__.py
tests/: FooTest.py
